# webapp-factory

./: .gitignore  MIGRATION_OAUTH_POPUP.md  OAUTH_POPUP_IMPLEMENTATION.md  OAUTH_QUICK_REFERENCE.md  README.md  coverage.xml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  GOOGLE_OAUTH_SETUP.md  Makefile  OAUTH_SETUP.md  config.development.json  main.py  pyproject.toml  settings.py  uvicorn.ini
apps/api/apps/api/: main.py  settings.py
apps/api/apps/api/middleware/: logging.py
apps/api/apps/api/models/: user.py
apps/api/apps/api/providers/: firestore.py  stripe.py
apps/api/apps/api/routes/: health.py  payments.py  users.py
apps/api/apps/api/security/: guards.py
apps/api/apps/api/services/: auth_service.py  entitlement_service.py
apps/api/auth/: README.md  __init__.py  decorators.py  deps.py  jwt.py  models.py
apps/api/config/: __init__.py  auth.py  base.py  database.py  features.py  google_oauth.py  json_loader.py  logging.py  security.py
apps/api/config/environments/: __init__.py  development.py  production.py  testing.py
apps/api/docs/: CONFIGURATION.md  DEVELOPMENT.md  USER_MANAGEMENT.md
apps/api/middleware/: request_id.py  security_headers.py
apps/api/providers/: firestore.py  redis.py  shopify.py
apps/api/repositories/: __init__.py  user_repository.py
apps/api/routes/: auth.py  consent.py  feedback.py  google_auth.py  notifications.py  payments.py  protected.py  users.py
apps/api/schemas/: feedback.py  notification.py  user.py
apps/api/scripts/: config_manager.py  jwt_test_helper.py  manual_webhook_test.py  run_tests.py
apps/api/services/: __init__.py  auth_service.py  billing_service.py  feedback_service.py  google_oauth_service.py  notification_service.py  user_service.py
apps/api/tests/: README.md  conftest.py  test_helpers.py  test_settings_env_loading.py
apps/api/tests/auth/: test_decorators.py  test_deps.py  test_jwt.py  test_models.py  test_protected_routes.py
apps/api/tests/routes/: test_feedback.py  test_payments.py
apps/api/tests/services/: test_billing_service.py  test_feedback_service.py
apps/web/: .eslintrc.cjs  THEMING.md  index.html  manifest.webmanifest  package.json  sw.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/dev-dist/: registerSW.js
apps/web/public/: app.config.json  offline.html
apps/web/scripts/: audit-brands.ts  build-themes.ts
apps/web/src/: index.css  main.tsx
apps/web/src/app/: App.tsx  routes.tsx
apps/web/src/app/components/: AuthMenuConnected.tsx  BottomNav.tsx  ChartApex.tsx  ChartTheme.tsx  CookieBanner.tsx  Footer.tsx  Icon.tsx  NavSidebar.tsx  PWAUpdatePrompt.tsx  PopupOAuth.tsx  ThemeSwitch.tsx  TopBar.tsx
apps/web/src/app/examples/: ThemeExample.tsx
apps/web/src/app/layouts/: DesktopLayout.tsx  MobileLayout.tsx
apps/web/src/app/lib/: analytics.ts  api.ts  cn.ts  featureFlags.ts  responsive.ts  (+2 more)
apps/web/src/config/: provider.tsx  schema.ts
apps/web/src/lib/: cookieConsentEvents.ts  useCookieConsent.ts  useLoadScriptIfConsent.ts
apps/web/src/pwa/: usePwaUpdate.tsx
infra/firebase/: .firebaserc  firebase.json  firestore.rules
infra/github/workflows/: ci.yml  deploy.yml
infra/scripts/: dev.sh  openapi_export.sh
repo_guidelines/: setup.md
tools/: firestore_prod_smoke.py
(+151 files in other folders)
