[project]
name = "api"
version = "0.1.0"
dependencies = [
  "fastapi~=0.115",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.9",
  "python-multipart~=0.0",
  "itsdangerous~=2.2",
  "google-cloud-firestore~=2.16",
  "redis~=5.0",
  "fastapi-limiter~=0.1",
  "pyjwt[crypto]~=2.9",
  "httpx~=0.27",
  "opentelemetry-sdk~=1.26",
  "opentelemetry-instrumentation-fastapi~=0.47b0",
  "prometheus-client~=0.21",
  "stripe~=10.10"
]
requires-python = ">=3.11"

[tool.black]
line-length = 100
