[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.115",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.9",
  "pydantic-settings~=2.5",
  "python-multipart~=0.0",
  "itsdangerous~=2.2",
  "google-cloud-firestore~=2.16",
  "redis~=5.0",
  "fastapi-limiter~=0.1",
  "pyjwt[crypto]~=2.9",
  "cryptography~=42.0",
  "httpx~=0.27",
  "opentelemetry-sdk~=1.26",
  "opentelemetry-instrumentation-fastapi~=0.47b0",
  "prometheus-client~=0.21",
  "stripe~=10.10"
]

[project.optional-dependencies]
test = [
  "pytest~=8.0",
  "pytest-asyncio~=0.23",
  "pytest-cov~=4.0",
  "pytest-mock~=3.12",
  "pytest-xdist~=3.5",
  "httpx~=0.27",  # For TestClient
]

dev = [
  "black~=24.0",
  "isort~=5.13",
  "flake8~=7.0",
  "mypy~=1.8",
  "pre-commit~=3.6",
]

[tool.setuptools.packages.find]
include = ["auth*", "routes*", "schemas*", "security*", "services*", "providers*", "middleware*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--strict-markers",
  "--strict-config", 
  "--verbose",
  "--tb=short",
  "--cov=auth",
  "--cov=routes",
  "--cov=services",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "auth: marks tests related to authentication",
  "routes: marks tests related to API routes",
  "models: marks tests related to data models",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["auth", "routes", "services", "providers"]
omit = [
  "tests/*",
  "*/tests/*",
  "*/__pycache__/*",
  "*/migrations/*",
  "*/venv/*",
  "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "google.cloud.firestore",
  "redis",
  "stripe",
  "prometheus_client",
]
ignore_missing_imports = true
